# cubosphere-code

./: .editorconfig  .gitignore  .gitmodules  .lgtm.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  INSTALL.md  INSTALL.original  README.md  TODO.md  lgtm.yml
.circleci/: config.yml  do-build.sh  ftpscript  install-deps.sh  pack-tgz.sh  prepare-artifacts.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  wiki-edit-request.md
cmake/: FindPNG++.cmake  FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
documents/: Credits to original authors.txt  GPL.txt  SDL.txt  UserEpisodes.txt
lib/glew/: CMakeLists.txt
src/: CMakeLists.txt  c3dobjects.cpp  c3dobjects.hpp  console.cpp  console.hpp  cuboactors.cpp  cuboactors.hpp  cuboboxes.cpp  cuboboxes.hpp  cuboenemies.cpp  cuboenemies.hpp  cubolevels.cpp  cubolevels.hpp  cubopathfind.cpp  cubopathfind.hpp  cuboutils.cpp  cuboutils.hpp  definitions.cpp  definitions.hpp  events.cpp  events.hpp  filesystem.cpp  filesystem.hpp  fonts.cpp  fonts.hpp  game.cpp  game.hpp  glew.hpp  globals.cpp  globals.hpp  glutils.cpp  glutils.hpp  joystick.cpp  joystick.hpp  keyboard.cpp  keyboard.hpp  log.cpp  log.hpp  luamodules.cpp  luamodules.hpp  (+27 more)
